<resources>
    <string name="app_name">MedsOn</string>
    <string name="hint_email">Email-id</string>
    <string name="hint_password">Password</string>
    <string name="hint_age">Age</string>
    <string name="hint_phone_no">Phone-no</string>
    <string name="hint_name">Name</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_search_results">search_results</string>
    <string name="title_activity_search_results1">search_results1</string>
</resources>
