<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ccbb"
    tools:context=".LoginSignUpContainer"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="426dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/if_admin_account"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:autoText="true"
            android:clickable="true"
            android:gravity="top|bottom|center_horizontal"
            android:text="Admin user?"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_id_1"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hint_email"

            android:inputType="textPersonName"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/password_1"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"

            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="197dp" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"

            android:ems="10"
            android:hint="@string/hint_age"
            android:inputType="number" />

        <EditText
            android:id="@+id/phone_no"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"

            android:hint="@string/hint_phone_no"
            android:inputType="phone" />

        <TextView
            android:id="@+id/sign_up_error"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="TextView"
            android:visibility="invisible" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:clickable="true"
            android:text="Create Account"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
        />

        <Button
            android:id="@+id/Sign-in"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="Sign-In"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
        />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/sign_up_progress"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:indeterminate="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="invisible" />

</android.support.constraint.ConstraintLayout>
